# mPLUG-DocOwl

./: .gitignore  README.md  pyproject.toml
DocLLM/: export_docowl.jsonl  export_minigpt4.jsonl  export_mplug_owl.jsonl
DocOwl/: README.md
DocOwl/DocLLM/: LLMDoc.jsonl
DocOwl1.5/: README.md  app.py  docowl_benchmark_evaluate.py  docowl_doclocal4k_evaluate.py  docowl_infer.py  model_worker.py
DocOwl1.5/evaluation/: benchmarks_eval.py
DocOwl1.5/mplug_docowl/: __init__.py  conversation.py  mm_utils.py  processor.py  utils.py
DocOwl1.5/scripts/: finetune_docowl.sh  finetune_docowl_lora.sh  zero3.json
DocOwl2/: README.md  docowl_benchmark_evaluate.py  sample.py
DocOwl2/evaluation/: benchmarks_eval.py  dude_eval.py  due_benchmarks_eval.py  evaluator.py  mpdocvqa_eval.py  newsvideoqa_eval.py
PaperOwl/: .gitignore  README.md  ds_config.json
PaperOwl/mplug_owl/: modeling_mplug_owl.py
TinyChart/: README.md  app.py  inference.ipynb  pyproject.toml
TinyChart/scripts/: convert_model_config.py  evaluate.sh  merge_jsonl_sort.py  split_jsonl_dataset.py  train.sh  vit_add_tome.py  zero3_offload_decay.json
TinyChart/tinychart/: __init__.py  arguments.py  constants.py  conversation.py  mm_utils.py  utils.py
TinyChart/tinychart/data/: dataset.py  process.py
TinyChart/tinychart/data/preprocess/: default.py  phi.py  v1.py
TinyChart/tinychart/eval/: eval_chart2table.py  eval_chart2text.py  eval_metric.py  eval_model.py  run_eval.py  run_tiny_chart.py
TinyChart/tinychart/model/: __init__.py  builder.py  llava_arch.py  model_factory.py
TinyChart/tinychart/model/language_model/: llava_phi.py
TinyChart/tinychart/model/multimodal_encoder/: builder.py  merge.py  siglip_encoder.py
TinyChart/tinychart/model/multimodal_projector/: builder.py
TinyChart/tinychart/train/: llava_trainer.py  train.py  train_utils.py
UReader/: README.md  app.py
(+59 files in other folders)
