[project]
name = "mplug-docowl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "editdistance>=0.8.1",
    "einops>=0.8.0",
    "flash-attn>=2.7.2.post1",
    "icecream>=2.1.3",
    "protobuf>=5.29.2",
    "pycocoevalcap>=1.2",
    "sentencepiece>=0.2.0",
    "textdistance>=4.6.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
]
